# too-short-url

./: README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: routine-tests.yml
tests/: test_check_url.py  test_too_short_url.py  test_too_st.py
too_short_url/: __init__.py  __main__.py  check_url.py  too_st.py
