[tool.poetry]
name = "too-short-url"
version = "0.1.0"
description = "short url based on too.st"
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/too-short-url"

[tool.poetry.dependencies]
python = "^3.8"
logzero = "^1.7.0"
icecream = "^2.1.2"
environs = "^9.5.0"
typer = "^0.4.0"
furl = "^2.1.3"
validators = "^0.18.2"
Brotli = "^1.0.9"
httpx = "^0.22.0"
pyquery = "^1.4.3"

[tool.poetry.scripts]
too-st = "too_short_url.__main__:app"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
